--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body, html {
       <a href="#about" class="w3-bar-item w3-button">About</a>
       <a href="labs/" class="w3-bar-item w3-button"><i class="fa fa-folder"></i>Labs</a>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="w3-bar-item w3-button"><i class="fa fa-camera"></i>Videos</a>
-      <a href="https://github.com/mit-rss" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i>Github</a>
+      <a href="https://github.com/mit-rss2024-16" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i>Github</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -90,9 +90,9 @@ body, html {
 <!-- Header with full-height image -->
 <header class="title_img w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-bottommiddle w3-text-white w3-center">
-    <h1>Team TA!</h1>
+    <h1>Team 16!<b>style="font-size:100px">&#128526;</b></h1>
     <p><a href="https://youtu.be/xLZU6TcSmRo" style="width:100%" class="w3-button w3-white w3-opacity w3-hover-opacity-off">
-        Innovation starts somewhere, so why not let it start here?
+        we sure are doing our best
     </a></p>
   </div>
 </header>
