--- a/labs/index.html
+++ b/labs/index.html
@@ -34,13 +34,13 @@ body, html {
 <!-- MAKE SURE YOU GET THE RELATIVE PATHS RIGHT FOR THE NAV BAR!!!!-->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="../#home" class="w3-bar-item w3-button w3-wide">RSS Team TA</a>
+    <a href="../#home" class="w3-bar-item w3-button w3-wide">RSS Team 16</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="../#about" class="w3-bar-item w3-button">About</a>
       <a href="./" class="w3-bar-item w3-button"><i class="fa fa-folder"></i> Labs</a>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="w3-bar-item w3-button"><i class="fa fa-camera"></i>Videos</a>
-      <a href="https://github.com/mit-rss" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i>Github</a>
+      <a href="https://github.com/rss2024-16" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i>Github</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -62,7 +62,7 @@ body, html {
 
 <header class="title_img w3-display-container w3-grayscale-min">
   <div class="w3-display-bottommiddle w3-text-white w3-center">
-    <h1 class="w3-center" style="font-weight:bold">LAB WORK</h1> </br>
+    <h1 class="w3-center" style="font-weight:bold;margin-top:20px;">LAB WORK</h1> </br>
     <p class="w3-center" style="font-weight:bold">What we've done for Robotics: Science and Systems</p>
   </div>
 </header>
