--- a/labs/index.html
+++ b/labs/index.html
@@ -62,7 +62,7 @@ body, html {
 
 <header class="title_img w3-display-container w3-grayscale-min">
   <div class="w3-display-bottommiddle w3-text-white w3-center">
-    <h1 class="w3-center" style="font-weight:bold;margin-top:20px;">LAB WORK</h1> </br>
+    <h1 class="w3-center" style="font-weight:bold;padding-top:60px;">LAB WORK</h1> </br>
     <p class="w3-center" style="font-weight:bold">What we've done for Robotics: Science and Systems</p>
   </div>
 </header>
