--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body, html {
 }
 .team_member h4 {
   font-size: 20px;
-  font-size: 3vw;
+  font-size: 2.5vw;
 }
 
 .headshot {
@@ -63,9 +63,9 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="labs/" class="w3-bar-item w3-button"><i class="fa fa-folder"></i>Labs</a>
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="w3-bar-item w3-button"><i class="fa fa-camera"></i>Videos</a>
-      <a href="https://github.com/rss2024-16" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i>Github</a>
+      <a href="labs/" class="w3-bar-item w3-button"><i class="fa fa-folder"></i> Labs</a>
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="w3-bar-item w3-button"><i class="fa fa-camera"></i> Videos</a>
+      <a href="https://github.com/rss2024-16" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i> Github</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -90,67 +90,70 @@ body, html {
 <!-- Header with full-height image -->
 <header class="title_img w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-bottommiddle w3-text-white w3-center">
-    <h1>Team 16&#128526;</h1>
-    <p><a href="https://youtu.be/xLZU6TcSmRo" style="width:100%" class="w3-button w3-white w3-opacity w3-hover-opacity-off">
-        we sure are doing our best
+    <h1>Team 16 </h1>
+    <p><a href="labs/" style="width:100%" class="w3-button w3-white w3-opacity w3-hover-opacity-off">
+        Meet the Bot
     </a></p>
   </div>
 </header>
 
 <div class="w3-container w3-white" style="padding:5% 5%">
+  <div class="w3-card w3-white" style="width:100%; text-align:center;">
+    <h1> Meet the Team!  </h1>
+  </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/wall_e.jfif">
-      <h4>Tim Beaver</h4>
-      <p>tbeaver@mit.edu</p>
+      <h4>Philip Johnson</h4>
+      <p>pj_iii@mit.edu</p>
       <p>These are some template bios; fill this in for each of your team members!
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/r2.jpg">
-      <h4>Tim Beaver</h4>
-      <p>tbeaver@mit.edu</p>
+      <h4>Maxwell Zetina-Jimenez</h4>
+      <p>zetina@mit.edu</p>
       <p>These are some template bios; fill this in for each of your team members!
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/wall_e.jfif">
-      <h4>Tim Beaver</h4>
-      <p>tbeaver@mit.edu</p>
+      <h4>Ellen Zhang</h4>
+      <p>ellen660@mit.edu</p>
       <p>These are some template bios; fill this in for each of your team members!
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/r2.jpg">
-      <h4>Tim Beaver</h4>
-      <p>tbeaver@mit.edu</p>
+      <h4>Trevor Johst</h4>
+      <p>trejohst@mit.edu</p>
       <p>These are some template bios; fill this in for each of your team members!
       </p>
   </div>
   <div class="w3-card team_member">
-      <img class="headshot" src="img/wall_e.jfif">
-      <h4>Tim Beaver</h4>
-      <p>tbeaver@mit.edu</p>
-      <p>These are some template bios; fill this in for each of your team members!
+      <img class="headshot" src="img/sameen.jpg">
+      <h4>Sameen Ahmad</h4>
+      <p>sameen_a@mit.edu</p>
+      <p> Hi! I'm a freshman plan to major in 6-2 with a minor in 2. I'm especially interested in autonomous robotics, prosthetics, and exoskeletons.
       </p>
   </div>
 </div>
 
 <!-- Contact Section -->
-<div class="w3-container w3-grey" style="padding:5% 5%;text-align:center;" id="about">
-  <div class="w3-card w3-white" style="width:100%">
-    <h1>About Us</h1>
+<div class="w3-container w3-grey" style="padding:5% 5%;" id="about">
+  <div class="w3-card w3-white" style="width:100%; text-align:center;">
+    <h1> Learn More </h1>
   </div>
-  <div class="w3-cell w3-red" style="width:30%;float:left;min-height: 200px;">
+  <div class="w3-cell w3-red" style="width:30%;float:left;min-height: 200px; text-align:center;padding:5% ">
       <i class="fa fa-folder"></i> <!--Put an image here or something?-->
-      <p>Do something that is unique here. (You can change this to team values or something?)</p>
+      <a href="labs/" style="width:100%" class="w3-button  w3-hover-opacity-off"><h2>Our Robot</h2></a>
   </div>
-  <div class="w3-cell w3-white" style="width:30%;margin-left:5%;float:left;min-height: 200px;">
+  <div class="w3-cell w3-white" style="width:30%;margin-left:5%;float:left;min-height: 200px; text-align:center; padding:5%">
       <i class="fa fa-folder"></i><!--Put an image here or something?-->
-      <p>The TAs are not that unique, so we are just writing a lot of filler things here so we look cool.</p>
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="width:100%" class="w3-button  w3-hover-opacity-off"><h2>Gallery</h2></a>
   </div>
-  <div class="w3-cell w3-blue" style="width:30%;margin-left:5%;float:left;min-height: 200px;">
+  <div class="w3-cell w3-blue" style="width:30%;margin-left:5%;float:left;min-height: 200px; text-align:center;padding:5%">
       <i class="fa fa-folder"></i><!--Put an image here or something?-->
-      <p>Si vos es pulchellus frigus hanc: et admonitus in hoc genere digna est. It tristis et non dederint tibi. Benediximus</p>
+      <a href="https://github.com/rss2024-16" style="width:100%" class="w3-button  w3-hover-opacity-off"><h2>Github</h2></a>
   </div>
 </div>
 
