--- a/labs/index.html
+++ b/labs/index.html
@@ -39,8 +39,8 @@ body, html {
     <div class="w3-right w3-hide-small">
       <a href="../#about" class="w3-bar-item w3-button">About</a>
       <a href="./" class="w3-bar-item w3-button"><i class="fa fa-folder"></i> Labs</a>
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="w3-bar-item w3-button"><i class="fa fa-camera"></i>Videos</a>
-      <a href="https://github.com/rss2024-16" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i>Github</a>
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="w3-bar-item w3-button"><i class="fa fa-camera"></i> Videos</a>
+      <a href="https://github.com/rss2024-16" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i> Github</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -54,10 +54,10 @@ body, html {
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close X</a>
-  <a href="../#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
-  <a href="./" onclick="w3_close()" class="w3-bar-item w3-button">Labs</a>
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" onclick="w3_close()" class="w3-bar-item w3-button">Videos</a>
-  <a href="https://github.com/mit-rss" onclick="w3_close()" class="w3-bar-item w3-button">Github</a>
+  <a href="../#about" onclick="w3_close()" class="w3-bar-item w3-button"> About</a>
+  <a href="./" onclick="w3_close()" class="w3-bar-item w3-button"> Labs</a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" onclick="w3_close()" class="w3-bar-item w3-button"> Videos</a>
+  <a href="https://github.com/mit-rss" onclick="w3_close()" class="w3-bar-item w3-button"> Github</a>
 </nav>
 
 <header class="title_img w3-display-container w3-grayscale-min">
@@ -67,6 +67,7 @@ body, html {
   </div>
 </header>
   <!-- End of repeated content on each page-->
+<body>
 
   <!-- Lab Sections -->
   <div class="w3-row-padding w3-white">
@@ -74,10 +75,10 @@ body, html {
     <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
       <div class="w3-card w3-center" style="min-height:600px">
         </br>
-        <img src="img/charles.jpg" alt="Survival" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
+        <img src="img/racecar_simulator.png" alt="Racecar_Simulator" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
         <div class="w3-container" style="margin-top:auto">
-          <h3><a href="example_lab">Lab 0: Example Lab</h3>
-          <p>Example of rendering html and embedding your presentation and report pdf.</p>
+          <h3><a href="example_lab">Lab 3: Wall-Following on the Racecar</h3>
+          <p>Fine-tuning wall following algorithm using pure pursuit and implementing safety controller.</p>
           <p><a href="example_lab"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
         </div>
       </div>
