--- a/index.html
+++ b/index.html
@@ -116,11 +116,10 @@ body, html {
       </p>
   </div>
   <div class="w3-card team_member">
-      <img class="headshot" src="img/wall_e.jfif">
+      <img class="headshot" src="img/ellen.png">
       <h4>Ellen Zhang</h4>
       <p>ellen660@mit.edu</p>
-      <p>These are some template bios; fill this in for each of your team members!
-      </p>
+      <p>Hi! I'm a junior majoring in 18 & 6-4. I like corgis.
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/r2.jpg">
@@ -133,7 +132,7 @@ body, html {
       <img class="headshot" src="img/sameen.jpg">
       <h4>Sameen Ahmad</h4>
       <p>sameen_a@mit.edu</p>
-      <p> Hi! I'm a freshman plan to major in 6-2 with a minor in 2. I'm especially interested in autonomous robotics, prosthetics, and exoskeletons.
+      <p> Hi! I'm a freshman planning to major in 6-2 with a minor in 2. I'm especially interested in autonomous robotics, prosthetics, and exoskeletons.
       </p>
   </div>
 </div>
