--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@ body, html {
     <h1> Meet the Team!  </h1>
   </div>
   <div class="w3-card team_member">
-      <img class="headshot" src="img/wall_e.jfif">
+      <img class="headshot" src="img/headshot.png">
       <h4>Philip Johnson</h4>
       <p>pj_iii@mit.edu</p>
-      <p>These are some template bios; fill this in for each of your team members!
+      <p>I am a senior Course 16 with interests in space exploration and autonomous systems.
       </p>
   </div>
   <div class="w3-card team_member">
