--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body, html {
     <h1> Meet the Team!  </h1>
   </div>
   <div class="w3-card team_member">
-      <img class="headshot" src="img/headshot.png">
+      <img class="headshot" src="img/headshot.PNG">
       <h4>Philip Johnson</h4>
       <p>pj_iii@mit.edu</p>
       <p>I am a senior Course 16 with interests in space exploration and autonomous systems.
