--- a/labs/index.html
+++ b/labs/index.html
@@ -71,7 +71,7 @@ body, html {
 
   <!-- Lab Sections -->
   <div class="w3-row-padding w3-white">
-    <!-- Example Lab -->
+    <!-- Lab 3 -->
     <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
       <div class="w3-card w3-center" style="min-height:600px">
         </br>
