--- a/labs/lab3/index.html
+++ b/labs/lab3/index.html
@@ -106,7 +106,7 @@ body, html {
   </div>
   <div class="w3-col l4 m4">
     <!-- Link this button to the current lab-->
-    <a href="#lab-3" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>  </div>
+    <a href="./" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>  </div>
   <div class="w3-col l4 m4">
     <!-- Link this button to the next lab-->
     <a href="../42" class="w3-button w3-light-grey">Next Lab <i class="fa fa-arrow-right w3-margin-right"></i></a>
