--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@ body, html {
       </p>
   </div>
   <div class="w3-card team_member">
-      <img class="headshot" src="img/wall_e.jfif">
+      <img class="headshot" src="img/ellen.png">
       <h4>Ellen Zhang</h4>
       <p>ellen660@mit.edu</p>
-      <p>These are some template bios; fill this in for each of your team members!
+      <p>I am a junior majoring in Course 6-4 and 18 with a focus on robotics and machine learning. 
       </p>
   </div>
   <div class="w3-card team_member">
