--- a/labs/lab3/index.html
+++ b/labs/lab3/index.html
@@ -82,8 +82,8 @@ body, html {
 
     <!-- Inlude your presentation in your site by exporting it via google slides: -->
     <!-- <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRpW1Xoe9_g0XDnndzGZCJ7oWnZjtMupPmKlLa4PvGi_4eqlTEPjfyD1P0sq6FPt-flkR9QEF-b5H6f/embed?start=true&loop=true&delayms=3000" frameborder="0" width=95% height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> -->
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTPLQEQuIl8IRWPPK_8vO2b2ZVdMs-cub6POOf3CBJc1iArVv6_HsoL5gbqIHoBw_c9xBM9v1fVTFgT/embed?start=true&loop=true&delayms=5000" frameborder="0" width="95%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTPLQEQuIl8IRWPPK_8vO2b2ZVdMs-cub6POOf3CBJc1iArVv6_HsoL5gbqIHoBw_c9xBM9v1fVTFgT/embed?start=true&loop=true&delayms=5000" frameborder="0" width="95" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    
     <!-- Include a PDF of your lab report here: -->
     <!-- <object data="../../latex_report/latex_report.pdf" type="application/pdf" width="720px" height="935px">
       <embed src="../../latex_report/latex_report.pdf">
