--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@ body, html {
   </div>
   <div class="w3-cell w3-white" style="width:30%;margin-left:5%;float:left;min-height: 200px; text-align:center; padding:5%">
       <i class="fa fa-folder"></i><!--Put an image here or something?-->
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="width:100%" class="w3-button  w3-hover-opacity-off"><h2>Gallery</h2></a>
+      <!-- <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="width:100%" class="w3-button  w3-hover-opacity-off"><h2>Gallery</h2></a> -->
+      <a href="gallery/" style="width:100%" class="w3-button  w3-hover-opacity-off"><h2>Gallery</h2></a>
   </div>
   <div class="w3-cell w3-blue" style="width:30%;margin-left:5%;float:left;min-height: 200px; text-align:center;padding:5%">
       <i class="fa fa-folder"></i><!--Put an image here or something?-->
