--- a/gallery/index.html
+++ b/gallery/index.html
@@ -38,8 +38,8 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="../#about" class="w3-bar-item w3-button">About</a>
-      <a href="./" class="w3-bar-item w3-button"><i class="fa fa-folder"></i> Labs</a>
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="w3-bar-item w3-button"><i class="fa fa-camera"></i> Videos</a>
+      <a href="../labs" class="w3-bar-item w3-button"><i class="fa fa-folder"></i> Labs</a>
+      <a href="./" class="w3-bar-item w3-button"><i class="fa fa-camera"></i> Videos</a>
       <a href="https://github.com/rss2024-16" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i> Github</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -55,14 +55,14 @@ body, html {
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close X</a>
   <a href="../#about" onclick="w3_close()" class="w3-bar-item w3-button"> About</a>
-  <a href="./" onclick="w3_close()" class="w3-bar-item w3-button"> Labs</a>
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" onclick="w3_close()" class="w3-bar-item w3-button"> Videos</a>
+  <a href="../labs" onclick="w3_close()" class="w3-bar-item w3-button"> Labs</a>
+  <a href="./" onclick="w3_close()" class="w3-bar-item w3-button"> Videos</a>
   <a href="https://github.com/mit-rss" onclick="w3_close()" class="w3-bar-item w3-button"> Github</a>
 </nav>
 
 <header class="title_img w3-display-container w3-grayscale-min">
   <div class="w3-display-bottommiddle w3-text-white w3-center">
-    <h1 class="w3-center" style="font-weight:bold;padding-top:60px;">LAB WORK</h1> </br>
+    <h1 class="w3-center" style="font-weight:bold;padding-top:60px;">GALLERY</h1> </br>
     <p class="w3-center" style="font-weight:bold">What we've done for Robotics: Science and Systems</p>
   </div>
 </header>
