--- a/gallery/index.html
+++ b/gallery/index.html
@@ -26,6 +26,29 @@ body, html {
 .w3-bar .w3-button {
   padding: 16px;
 }
+
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+
 </style>
 
 
@@ -68,22 +91,33 @@ body, html {
 </header>
   <!-- End of repeated content on each page-->
 <body>
-
-  <!-- Lab Sections -->
-  <div class="w3-row-padding w3-white">
-    <!-- Lab 3 -->
-    <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
-      <div class="w3-card w3-center" style="min-height:600px">
-        </br>
-        <img src="img/robocar.png" alt="Racecar_Simulator" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
-        <div class="w3-container" style="margin-top:auto">
-          <h3><a href="lab3">Lab 3: Wall-Following on the Racecar</h3>
-          <p>Fine-tuning wall following algorithm using pure pursuit and implementing safety controller.</p>
-          <p><a href="lab3"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
-        </div>
-      </div>
-    </div>
-  <!-- end the lab section -->
+  
+  <div class="gallery">
+    <a target="_blank" href="img_5terre.jpg">
+      <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+    </a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+  
+  <div class="gallery">
+    <a target="_blank" href="img_forest.jpg">
+      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+    </a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+  
+  <div class="gallery">
+    <a target="_blank" href="img_lights.jpg">
+      <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+    </a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+  
+  <div class="gallery">
+    <a target="_blank" href="img_mountains.jpg">
+      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+    </a>
+    <div class="desc">Add a description of the image here</div>
   </div>
 
 </body>
