--- a/gallery/index.html
+++ b/gallery/index.html
@@ -94,28 +94,28 @@ div.desc {
   
   <div class="gallery">
     <a target="_blank" href="img_5terre.jpg">
-      <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+      <img src="img/corgi.webp" alt="Corgi" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
   
   <div class="gallery">
     <a target="_blank" href="img_forest.jpg">
-      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+      <img src="img/husky.webp" alt="Husky" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
   
   <div class="gallery">
     <a target="_blank" href="img_lights.jpg">
-      <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+      <img src="img/samoyed.webp" alt="Samoyed" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
   
   <div class="gallery">
     <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+      <img src="img/akita.jpg" alt="Akita" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
