--- a/gallery/index.html
+++ b/gallery/index.html
@@ -93,28 +93,28 @@ div.desc {
 <body>
   
   <div class="gallery">
-    <a target="_blank" href="img_5terre.jpg">
+    <a target="_blank" href="img/corgi.webp">
       <img src="img/corgi.webp" alt="Corgi" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
   
   <div class="gallery">
-    <a target="_blank" href="img_forest.jpg">
+    <a target="_blank" href="img/husky.webp">
       <img src="img/husky.webp" alt="Husky" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
   
   <div class="gallery">
-    <a target="_blank" href="img_lights.jpg">
+    <a target="_blank" href="img/samoyed.webp">
       <img src="img/samoyed.webp" alt="Samoyed" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
   
   <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
+    <a target="_blank" href="img/akita.jpg">
       <img src="img/akita.jpg" alt="Akita" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
