--- a/gallery/index.html
+++ b/gallery/index.html
@@ -31,7 +31,7 @@ div.gallery {
   margin: 5px;
   border: 1px solid #ccc;
   float: left;
-  width: 180px;
+  width: 50%;
 }
 
 div.gallery:hover {
@@ -94,28 +94,28 @@ div.desc {
   
   <div class="gallery">
     <a target="_blank" href="img/corgi.webp">
-      <img src="img/corgi.webp" alt="Corgi" width="600" height="400">
+      <img src="img/corgi.webp" alt="Corgi" onclick="onClick(this)" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
   
   <div class="gallery">
     <a target="_blank" href="img/husky.webp">
-      <img src="img/husky.webp" alt="Husky" width="600" height="400">
+      <img src="img/husky.webp" alt="Husky" onclick="onClick(this)" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
   
   <div class="gallery">
     <a target="_blank" href="img/samoyed.webp">
-      <img src="img/samoyed.webp" alt="Samoyed" width="600" height="400">
+      <img src="img/samoyed.webp" alt="Samoyed" onclick="onClick(this)" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
   
   <div class="gallery">
     <a target="_blank" href="img/akita.jpg">
-      <img src="img/akita.jpg" alt="Akita" width="600" height="400">
+      <img src="img/akita.jpg" alt="Akita" onclick="onClick(this)" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
