--- a/gallery/index.html
+++ b/gallery/index.html
@@ -94,7 +94,7 @@ div.desc {
   
   <div class="gallery">
     <a target="_blank" href="img/corgi.webp">
-      <img src="img/corgi.webp" alt="Corgi" onclick="onClick(this)" width="600" height="400">
+      <img src="img/corgi.webp" alt="Corgi" onclick="onClick(this)" width="100%" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
