--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body, html {
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">About</a>
       <a href="labs/" class="w3-bar-item w3-button"><i class="fa fa-folder"></i> Labs</a>
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="w3-bar-item w3-button"><i class="fa fa-camera"></i> Videos</a>
+      <a href="./" class="w3-bar-item w3-button"><i class="fa fa-camera"></i> Videos</a>
       <a href="https://github.com/rss2024-16" class="w3-bar-item w3-button"><i class="fa fa-github-square"></i> Github</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -144,16 +144,16 @@ body, html {
     <h1> Learn More </h1>
   </div>
   <div class="w3-cell w3-red" style="width:30%;float:left;min-height: 200px; text-align:center;padding:5% ">
-      <i class="fa fa-folder"></i> <!--Put an image here or something?-->
+      <i class="fa fa-car"></i> <!--Put an image here or something?-->
       <a href="labs/" style="width:100%" class="w3-button  w3-hover-opacity-off"><h2>Our Robot</h2></a>
   </div>
   <div class="w3-cell w3-white" style="width:30%;margin-left:5%;float:left;min-height: 200px; text-align:center; padding:5%">
-      <i class="fa fa-folder"></i><!--Put an image here or something?-->
+      <i class="fa fa-camera"></i><!--Put an image here or something?-->
       <!-- <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="width:100%" class="w3-button  w3-hover-opacity-off"><h2>Gallery</h2></a> -->
       <a href="gallery/" style="width:100%" class="w3-button  w3-hover-opacity-off"><h2>Gallery</h2></a>
   </div>
   <div class="w3-cell w3-blue" style="width:30%;margin-left:5%;float:left;min-height: 200px; text-align:center;padding:5%">
-      <i class="fa fa-folder"></i><!--Put an image here or something?-->
+      <i class="fa fa-github-square"></i><!--Put an image here or something?-->
       <a href="https://github.com/rss2024-16" style="width:100%" class="w3-button  w3-hover-opacity-off"><h2>Github</h2></a>
   </div>
 </div>
