--- a/gallery/index.html
+++ b/gallery/index.html
@@ -101,6 +101,14 @@ body, html {
 <body>
   
   <div>
+    <video width="40%" autoplay muted>
+      <source src="img/wall_follower.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
+    <video width="40%" autoplay muted>
+      <source src="img/safety_controller.MOV" type="video/MOV">
+    Your browser does not support the video tag.
+    </video>
     <img src="img/corgi.webp" alt="Image 1" onclick="onClick(this)" style="width:40%;">
     <img src="img/husky.webp" alt="Image 2" onclick="onClick(this)" style="width:40%;">
     <img src="img/samoyed.webp" alt="Image 3" onclick="onClick(this)" style="width:40%;">
