--- a/gallery/index.html
+++ b/gallery/index.html
@@ -40,10 +40,18 @@ div.gallery img {
   height: auto;
 }
 
+div.gallery img:hover {
+  border: 1px solid #777;
+}
+
 div.gallery video {
   width: 40%;
   margin: 5px;
   height: auto;
+}
+
+div.gallery video:hover {
+  border: 1px solid #777;
 }
 
 .modal {
