--- a/gallery/index.html
+++ b/gallery/index.html
@@ -133,7 +133,7 @@ div.gallery video:hover {
     Your browser does not support the video tag.
     </video>
     <video width="40%" autoplay muted>
-      <source src="img/safety_controller.MOV" type="video/MOV">
+      <source src="img/safety_controller.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
     <img src="img/corgi.webp" alt="Image 1" onclick="onClick(this)" style="width:40%;">
