--- a/gallery/index.html
+++ b/gallery/index.html
@@ -128,11 +128,11 @@ div.gallery video:hover {
 <body>
   
   <div class = "gallery">
-    <video width="40%" autoplay muted>
+    <video width="40%" autoplay muted onclick="onClick(this)">
       <source src="img/wall_follower.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-    <video width="40%" autoplay muted>
+    <video width="40%" autoplay muted onclick="onClick(this)">
       <source src="img/safety_controller.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
