--- a/gallery/index.html
+++ b/gallery/index.html
@@ -128,18 +128,39 @@ div.gallery video:hover {
 <body>
   
   <div class = "gallery">
-    <video width="40%" autoplay muted onclick="onClick(this)">
+    <video width="40%" alt="Wall Follower" autoplay muted onclick="onClick(this)">
       <source src="img/wall_follower.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-    <video width="40%" autoplay muted onclick="onClick(this)">
+    <video width="40%" alt="Safety Controller" autoplay muted onclick="onClick(this)">
       <source src="img/safety_controller.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-    <img src="img/corgi.webp" alt="Image 1" onclick="onClick(this)" style="width:40%;">
-    <img src="img/husky.webp" alt="Image 2" onclick="onClick(this)" style="width:40%;">
-    <img src="img/samoyed.webp" alt="Image 3" onclick="onClick(this)" style="width:40%;">
-    <img src="img/akita.jpg" alt="Image 4" onclick="onClick(this)" style="width:40%;">
+    <video width="40%" alt="Circle" autoplay muted onclick="onClick(this)">
+      <source src="img/circle.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
+    <video width="40%" alt="Line Follower" autoplay muted onclick="onClick(this)">
+      <source src="img/line_follower.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
+    <video width="40%" alt="Line Follower 2" autoplay muted onclick="onClick(this)">
+      <source src="img/line_follower_2.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
+    <video width="40%" alt="Parking Controller" autoplay muted onclick="onClick(this)">
+      <source src="img/parking_controller.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
+    <video width="40%" alt="Yeet" autoplay muted onclick="onClick(this)">
+      <source src="img/yeet.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
+    <img src="img/phillip_doggo.jpg" alt="O.O" onclick="onClick(this)" style="width:40%;">
+    <img src="img/corgi.webp" alt="Corgi" onclick="onClick(this)" style="width:40%;">
+    <img src="img/husky.webp" alt="Husky" onclick="onClick(this)" style="width:40%;">
+    <img src="img/samoyed.webp" alt="Samoyed" onclick="onClick(this)" style="width:40%;">
+    <img src="img/akita.jpg" alt="Akita" onclick="onClick(this)" style="width:40%;">
   </div>
   
   <!-- The Modal -->
