--- a/gallery/index.html
+++ b/gallery/index.html
@@ -128,31 +128,31 @@ div.gallery video:hover {
 <body>
   
   <div class = "gallery">
-    <video width="40%" alt="Wall Follower" autoplay muted onclick="onClick(this)">
+    <video width="40%" alt="Wall Follower" loop autoplay muted onclick="onClick(this)">
       <source src="img/wall_follower.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-    <video width="40%" alt="Safety Controller" autoplay muted onclick="onClick(this)">
+    <video width="40%" alt="Safety Controller" loop autoplay muted onclick="onClick(this)">
       <source src="img/safety_controller.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-    <video width="40%" alt="Circle" autoplay muted onclick="onClick(this)">
+    <video width="40%" alt="Circle" loop autoplay muted onclick="onClick(this)">
       <source src="img/circle.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-    <video width="40%" alt="Line Follower" autoplay muted onclick="onClick(this)">
+    <video width="40%" alt="Line Follower" loop autoplay muted onclick="onClick(this)">
       <source src="img/line_follower.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-    <video width="40%" alt="Line Follower 2" autoplay muted onclick="onClick(this)">
+    <video width="40%" alt="Line Follower 2" loop autoplay muted onclick="onClick(this)">
       <source src="img/line_follower_2.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-    <video width="40%" alt="Parking Controller" autoplay muted onclick="onClick(this)">
+    <video width="40%" alt="Parking Controller" loop autoplay muted onclick="onClick(this)">
       <source src="img/parking_controller.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-    <video width="40%" alt="Yeet" autoplay muted onclick="onClick(this)">
+    <video width="40%" alt="Yeet" loop autoplay muted onclick="onClick(this)">
       <source src="img/yeet.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
