--- a/labs/index.html
+++ b/labs/index.html
@@ -83,6 +83,19 @@ body, html {
         </div>
       </div>
     </div>
+
+      <!-- Lab 4 -->
+      <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
+        <div class="w3-card w3-center" style="min-height:600px">
+          </br>
+          <img src="img/braking_distance.jpg" alt="Braking_Distance" style="width:70%" onclick="onClick(this)" class="w3-hover-opacity">
+          <div class="w3-container" style="margin-top:auto">
+            <h3><a href="lab4">Lab 4: Vision and Line Follower</h3>
+            <p>Implementing OpenCV for cone detection and integrating line follower algorithm. </p>
+            <p><a href="lab4"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
+          </div>
+        </div>
+      </div>
   <!-- end the lab section -->
   </div>
 
