--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@ body, html {
       </p>
   </div>
   <div class="w3-card team_member">
-      <img class="headshot" src="img/r2.jpg">
+      <img class="headshot" src="img/max.jpg">
       <h4>Maxwell Zetina-Jimenez</h4>
       <p>zetina@mit.edu</p>
-      <p>These are some template bios; fill this in for each of your team members!
+      <p>I am a junior in computer science and engineering with a minor in mechanical engineering. I am interested in autonomous robotics, IoT, and wearable tech.
       </p>
   </div>
   <div class="w3-card team_member">
