--- a/labs/lab5/index.html
+++ b/labs/lab5/index.html
@@ -70,10 +70,10 @@ body, html {
 
 <div class="w3-container w3-black" id="lab-0">
   <div class="w3-block w3-grey w3-center" style="margin-top:64px">
-    <h1>Lab 4: Vision and Line Follower </h1>
+    <h1>Lab 5: Localization </h1>
   </div>
   <div class="w3-block w3-white" style="padding:16px 16px">
-    <h1>Implementing OpenCV for cone detection and integrating line follower algorithm.</h1>
+    <h1>Implementing Particle Filter algorithm for localization in known environment map.</h1>
     <p>view our presentation below!</p>
 
     <!-- Inlude links to your presentation and a download of your report pdf: -->
