--- a/labs/index.html
+++ b/labs/index.html
@@ -108,7 +108,20 @@ body, html {
           <p><a href="lab5"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
         </div>
       </div>
-       </div>
+    </div>
+
+    <!-- Lab 6 -->
+    <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
+      <div class="w3-card w3-center" style="min-height:600px">
+        </br>
+        <img src="img/braking_distance.jpg" alt="Braking_Distance" style="width:70%" onclick="onClick(this)" class="w3-hover-opacity">
+        <div class="w3-container" style="margin-top:auto">
+          <h3><a href="lab6">Lab 6: Path Planning and Pure Pursuit</h3>
+          <p>Implementing path planning algorithms and pure pursuit on the racecar. </p>
+          <p><a href="lab6"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-info-circle"></i> More info</button></a></p>
+        </div>
+      </div>
+    </div>
   <!-- end the lab section -->
   </div>
 
