--- a/labs/index.html
+++ b/labs/index.html
@@ -101,7 +101,7 @@ body, html {
     <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
       <div class="w3-card w3-center" style="min-height:600px">
         </br>
-        <img src="img/robocar.png" alt="Racecar_Simulator" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
+        <img src="img/mcl.png" alt="Localization" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
         <div class="w3-container" style="margin-top:auto">
           <h3><a href="lab5">Lab 5: Localization </h3>
           <p>Implementing Particle Filter algorithm for localization in known environment map.</p>
@@ -114,7 +114,7 @@ body, html {
     <div class="w3-col l6 m6 w3-margin-bottom" style="margin-top:16px;max-width:50%">
       <div class="w3-card w3-center" style="min-height:600px">
         </br>
-        <img src="img/braking_distance.jpg" alt="Braking_Distance" style="width:70%" onclick="onClick(this)" class="w3-hover-opacity">
+        <img src="img/rrt.png" alt="rrt" style="width:95%" onclick="onClick(this)" class="w3-hover-opacity">
         <div class="w3-container" style="margin-top:auto">
           <h3><a href="lab6">Lab 6: Path Planning and Pure Pursuit</h3>
           <p>Implementing path planning algorithms and pure pursuit on the racecar. </p>
