--- a/labs/final_challenge/index.html
+++ b/labs/final_challenge/index.html
@@ -70,20 +70,19 @@ body, html {
 
 <div class="w3-container w3-black" id="lab-0">
   <div class="w3-block w3-grey w3-center" style="margin-top:64px">
-    <h1>Lab 6: Path Planning </h1>
+    <h1>Final Challenge: Race Around Track and Luigi's Mansion </h1>
   </div>
   <div class="w3-block w3-white" style="padding:16px 16px">
-    <h1>Implementing path planning algorithms and pure pursuit on the racecar.</h1>
+    <h1>Racing around the track and navigating Stata Basement!</h1>
     <p>view our presentation below!</p>
 
     <!-- Inlude links to your presentation and a download of your report pdf: -->
-    <p><a href="https://docs.google.com/presentation/d/19sKS9Uqx2FsJxv33UqukLRH8UIGF2Aw31v7qYQiful0/edit?usp=sharing">Link to Presentation</a></p>
+    <!-- <p><a href="https://docs.google.com/presentation/d/19sKS9Uqx2FsJxv33UqukLRH8UIGF2Aw31v7qYQiful0/edit?usp=sharing">Link to Presentation</a></p> -->
     <!-- <p><a href="./Lab_5_Report__Localization.pdf" download>Link to Download Lab Report</a></p> -->
 
     <!-- Inlude your presentation in your site by exporting it via google slides: -->
     <!-- <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRpW1Xoe9_g0XDnndzGZCJ7oWnZjtMupPmKlLa4PvGi_4eqlTEPjfyD1P0sq6FPt-flkR9QEF-b5H6f/embed?start=true&loop=true&delayms=3000" frameborder="0" width=95% height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> -->
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRDFLPdmH0NMONku1zBUtUlQkmiz5kzjnjRrRD9NUycaK0pvcQBfteVRA_q_6UFdmzbE3p7wg2YKZMB/embed?start=true&loop=true&delayms=5000" frameborder="0" width="95%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>    <object data="./Lab_5_Report__Localization.pdf" type="application/pdf" width="720px" height="935px">
-      <!-- <embed src="./Lab_5_Report__Localization.pdf"> -->
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRyjUHemtUIsd-W16oEkbhdaV02o2dzIHOdjBj5fOGSF-Cjwe-fz0H1UAZvpK--fpofVwBWISgEuEwC/embed?start=true&loop=true&delayms=5000" frameborder="0" width="95%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>      <!-- <embed src="./Lab_5_Report__Localization.pdf"> -->
       <!-- </embed> -->
     </object>
 
@@ -106,7 +105,7 @@ body, html {
     <a href="./" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>  </div>
   <div class="w3-col l4 m4">
     <!-- Link this button to the next lab-->
-    <a href="../final_challenge" class="w3-button w3-light-grey">Next Lab <i class="fa fa-arrow-right w3-margin-right"></i></a>
+    <a href="../" class="w3-button w3-light-grey">Next Lab <i class="fa fa-arrow-right w3-margin-right"></i></a>
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
