--- a/gallery/index.html
+++ b/gallery/index.html
@@ -128,6 +128,22 @@ div.gallery video:hover {
 <body>
   
   <div class = "gallery">
+    <video width="40%" alt="Racecar" loop autoplay muted onclick="onClick(this)">
+      <source src="img/racetrack.mov" type="video/mov">
+    Your browser does not support the video tag.
+    </video>
+    <video width="40%" alt="Path Planning" loop autoplay muted onclick="onClick(this)">
+      <source src="img/path_planning.gif" type="video/gif">
+    Your browser does not support the video tag.
+    </video>
+    <video width="40%" alt="Turning1" loop autoplay muted onclick="onClick(this)">
+      <source src="img/turning1.gif" type="video/gif">
+    Your browser does not support the video tag.
+    </video>
+    <video width="40%" alt="Turning2" loop autoplay muted onclick="onClick(this)">
+      <source src="img/turning.gif" type="video/gif">
+    Your browser does not support the video tag.
+    </video>
     <video width="40%" alt="Wall Follower" loop autoplay muted onclick="onClick(this)">
       <source src="img/wall_follower.mp4" type="video/mp4">
     Your browser does not support the video tag.
