--- a/labs/final_challenge/index.html
+++ b/labs/final_challenge/index.html
@@ -89,7 +89,8 @@ body, html {
 
     <video width="95%" 
                height="569" 
-               controls="controls">
+               controls="controls"
+               alt="Racecar" loop autoplay muted>
         <source 
                 src= "/gallery/img/run.mp4"
                 type="video/mp4" />
