--- a/labs/final_challenge/index.html
+++ b/labs/final_challenge/index.html
@@ -85,7 +85,7 @@ body, html {
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRyjUHemtUIsd-W16oEkbhdaV02o2dzIHOdjBj5fOGSF-Cjwe-fz0H1UAZvpK--fpofVwBWISgEuEwC/embed?start=true&loop=true&delayms=5000" frameborder="0" width="95%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>      <!-- <embed src="./Lab_5_Report__Localization.pdf"> -->
       <!-- </embed> -->
     </object>
-    <p>Our luigi run below! Score = 120 - 30 - 10 - 8 for 30 max infraction, 10 for manual assist, 8 for seconds over baseline (2 minutes).</p>
+    <p>Our luigi run below! Score = 120 - 30 - 10 - 8 = 72 for 30 max infraction, 10 for manual assist, 8 for seconds over baseline (2 minutes).</p>
 
     <video width="95%" 
                height="569" 
