--- a/labs/final_challenge/index.html
+++ b/labs/final_challenge/index.html
@@ -96,7 +96,7 @@ body, html {
                 type="video/mp4" />
        </video>
 
-    <video width="40%" alt="Luigi" loop autoplay muted onclick="onClick(this)">
+    <video width="40%" alt="Luigi" loop autoplay muted>
         <source src="/gallery/img/run.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
