--- a/labs/final_challenge/index.html
+++ b/labs/final_challenge/index.html
@@ -88,7 +88,7 @@ body, html {
     <p>Our luigi run below! Score = 120 - 30 - 10 - 8 = 72 for 30 max infraction, 10 for manual assist, 8 for seconds over baseline (2 minutes).</p>
 
     <iframe width="420" height="315"
-    src="https://youtu.be/wCzoZcJF_OM">
+    src="https://youtu.be/wCzoZcJF_OM?autoplay=1&mute=1">
     </iframe>
 
     <video width="95%" 
