--- a/gallery/index.html
+++ b/gallery/index.html
@@ -129,19 +129,19 @@ div.gallery video:hover {
   
   <div class = "gallery">
     <video width="40%" alt="Racecar" loop autoplay muted onclick="onClick(this)">
-      <source src="img/racetrack.mov" type="video/mov">
+      <source src="img/racetrack.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
     <video width="40%" alt="Path Planning" loop autoplay muted onclick="onClick(this)">
-      <source src="img/path_planning.gif" type="video/gif">
+      <source src="img/path_planning.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
     <video width="40%" alt="Turning1" loop autoplay muted onclick="onClick(this)">
-      <source src="img/turning1.gif" type="video/gif">
+      <source src="img/turning1.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
     <video width="40%" alt="Turning2" loop autoplay muted onclick="onClick(this)">
-      <source src="img/turning.gif" type="video/gif">
+      <source src="img/turning.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
     <video width="40%" alt="Wall Follower" loop autoplay muted onclick="onClick(this)">
