--- a/gallery/index.html
+++ b/gallery/index.html
@@ -133,7 +133,7 @@ div.gallery video:hover {
     Your browser does not support the video tag.
     </video>
     <video width="40%" alt="Path Planning" loop autoplay muted onclick="onClick(this)">
-      <source src="img/path_planning.mp4" type="video/mp4">
+      <source src="img/path_plannin.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
     <video width="40%" alt="Turning1" loop autoplay muted onclick="onClick(this)">
