--- a/labs/final_challenge/index.html
+++ b/labs/final_challenge/index.html
@@ -78,7 +78,7 @@ body, html {
 
     <!-- Inlude links to your presentation and a download of your report pdf: -->
     <!-- <p><a href="https://docs.google.com/presentation/d/19sKS9Uqx2FsJxv33UqukLRH8UIGF2Aw31v7qYQiful0/edit?usp=sharing">Link to Presentation</a></p> -->
-    <!-- <p><a href="./Lab_5_Report__Localization.pdf" download>Link to Download Lab Report</a></p> -->
+    <p><a href="./Final_Lab_Report.pdf" download>Link to Download Lab Report</a></p>
 
     <!-- Inlude your presentation in your site by exporting it via google slides: -->
     <!-- <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRpW1Xoe9_g0XDnndzGZCJ7oWnZjtMupPmKlLa4PvGi_4eqlTEPjfyD1P0sq6FPt-flkR9QEF-b5H6f/embed?start=true&loop=true&delayms=3000" frameborder="0" width=95% height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> -->
