--- a/index.html
+++ b/index.html
@@ -103,35 +103,35 @@ body, html {
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/headshot.PNG">
-      <h4>Philip Johnson</h4>
+      <h4>Philip <br>Johnson</h4>
       <p>pj_iii@mit.edu</p>
       <p>I am a senior Course 16 with interests in space exploration and autonomous systems.
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/max.jpg">
-      <h4>Maxwell Zetina-Jimenez</h4>
+      <h4>Maxwell <br>Zetina-Jimenez</h4>
       <p>zetina@mit.edu</p>
       <p>I am a junior in computer science and engineering with a minor in mechanical engineering. I am interested in autonomous robotics, IoT, and wearable tech.
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/ellen.png">
-      <h4>Ellen Zhang</h4>
+      <h4>Ellen <br>Zhang</h4>
       <p>ellen660@mit.edu</p>
       <p>I am a junior majoring in Course 6-4 and 18 with a focus on robotics and machine learning.
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/r2.jpg">
-      <h4>Trevor Johst</h4>
+      <h4>Trevor <br>Johst</h4>
       <p>trejohst@mit.edu</p>
-      <p>These are some template bios; fill this in for each of your team members!
+      <p>I am a sophomore in Aero/Astro interested in the applications of autonomous robotics for space exploration. 
       </p>
   </div>
   <div class="w3-card team_member">
       <img class="headshot" src="img/sameen.jpg">
-      <h4>Sameen Ahmad</h4>
+      <h4>Sameen <br>Ahmad</h4>
       <p>sameen_a@mit.edu</p>
       <p> Hi! I'm a freshman planning to major in 6-2 with a minor in 2. I'm especially interested in autonomous robotics, prosthetics, and exoskeletons.
       </p>
